@@ -1,4 +1,5 @@
 changes subsequent to 1.1.0
+	- resolved issue #63 "Ability to specify container in terms of begin and end offset"
 	- resolved issue #62 "Iteration over FSArray and FSList"
 	- resolved issue #6  "Initialize component from map or resource specifier"
     - resolved issue #59 "Unable to use doubles for parameters in the create* factory methods"
